# Rolodex-AI

./: .env.example  .gitignore  ARCHITECTURE.md  MIGRATION_PLAN.md  OVERVIEW.md  PRODUCT.md  README.md  app.html  fix_pilk_app.py  landing.html  mobile-app.html  pyproject.toml  rolodex.json
agent/: __init__.py  __main__.py  cli.py  config.py  connections.py  contacts_reader.py  daemon.py  digest.py  draft.py  holidays.py  imessage_reader.py  imessage_sender.py  inbound_poller.py  ingest.py  llm_client.py  models.py  ops.py  person_utils.py  relationship_signals.py  scheduler.py  scoring.py  store.py  telegram_bot.py  tonality.py  web.py
agent/channels/: __init__.py  base.py  dispatcher.py  facebook.py  imessage.py  instagram.py  meta_common.py  telegram.py  whatsapp.py  x.py
extension/: README.md  background.js  content-facebook.js  content-instagram.js  manifest.json  popup.css  popup.html  popup.js
extension/icons/: README.txt
tests/: test_ask_action_filters.py  test_channels.py  test_connections.py  test_inbound_poller.py  test_inbox_endpoints.py  test_ingest_merge.py  test_merge_duplicates.py  test_onboarding.py  test_relationship_signals.py  test_rolodex_cli.py  test_rolodex_contacts.py  test_rolodex_draft.py  test_rolodex_ingest.py  test_rolodex_ops.py  test_rolodex_scoring.py  test_rolodex_send_fallback.py  test_rolodex_store.py  test_rolodex_tonality.py  test_rolodex_web.py
website/: data-deletion.html  index.html  privacy.html  terms.html
