[project]
name = "rolodex-ai"
version = "0.1.0"
description = "The AI that quietly remembers everyone in your life and reaches out at exactly the right moments."
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Aaron Pilkington", email = "aaron@skyway.media" },
]
license = { text = "Proprietary" }
keywords = ["relationships", "crm", "ai", "imessage", "personal"]

dependencies = [
    "pydantic>=2.6",
    "anthropic>=0.40",
    "cryptography>=42",
    "python-telegram-bot>=21",
    "apscheduler>=3.10",
    "python-dotenv>=1.0",
    "click>=8.1",
    "rich>=13.7",
    "twilio>=9.0",
    "keyring>=24",
    "fastapi>=0.115",
    "uvicorn>=0.30",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
    "mypy>=1.10",
]

[project.scripts]
rolodex = "agent.__main__:cli"
rolodexd = "agent.daemon:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agent"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "B", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
